# orca_sim

./: .gitignore  README.md  hand_demo.py  pyproject.toml  random_policy.py
.github/workflows/: publish-pypi.yml
src/orca_sim/: __init__.py  envs.py  hand.py  joint_mapping.py  registry.py  task_envs.py  versions.py
src/orca_sim/assets/mjcf/: scene.xml
src/orca_sim/maniskill/: __init__.py  agent.py  push_cube_env.py  run.py
src/orca_sim/models/v1/: left.mjcf  left_extended.mjcf  right.mjcf  right_cube_orientation.mjcf  right_extended.mjcf
src/orca_sim/models/v2/: left.mjcf  right.mjcf  right_cube_orientation.mjcf
src/orca_sim/models/v2/mjcf/: orcahand_left.mjcf  orcahand_right.mjcf
src/orca_sim/scenes/v1/: scene_combined.xml  scene_combined_extended.xml  scene_left.xml  scene_left_extended.xml  scene_right.xml  scene_right_cube_orientation.xml  scene_right_extended.xml
src/orca_sim/scenes/v2/: scene_combined.xml  scene_left.xml  scene_right.xml  scene_right_cube_orientation.xml
tests/: test_envs.py  test_registry.py  test_runtime_api_contract.py  test_sim_hand.py  test_versions.py
