[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca_sim"
version = "0.1.0"
description = "ORCA hand simulation environment using Gymnasium and Mujoco."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Francesco Capuano", email = "capuano@robots.ox.ac.uk"},
]
dependencies = [
  "gymnasium>=0.29",
  "mujoco>=3.1",
  "numpy>=1.26",
  "orca_core @ git+https://github.com/orcahand/orca_core.git@d76990dd5bcd2df62b5c89b7ae9253bcdf0dc8d5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orca_sim = [
  "*.xml",
  "scenes/*/*.xml",
  "assets/mjcf/*.xml",
  "assets/mjcf/*/*.xml",
  "assets/mjcf/left/visual/*.stl",
  "assets/mjcf/left/collision/*.stl",
  "assets/mjcf/right/visual/*.stl",
  "assets/mjcf/right/collision/*.stl",
  "models/mjcf/*.mjcf",
  "models/*/*.mjcf",
  "models/*/assets/mjcf/*/*.stl",
]
