[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orca_sim"
version = "0.1.0"
description = "ORCA hand simulation environment using Gymnasium and Mujoco."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Francesco Capuano", email = "capuano@robots.ox.ac.uk"},
]
dependencies = [
  "gymnasium>=0.29",
  "mujoco>=3.1",
  "numpy>=1.26",
  "orca_core @ git+https://github.com/orcahand/orca_core.git@54523bf2229f4995028f143ed29529cc98c643d5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.14",
]
arm = [
  "mani_skill @ git+https://github.com/fracapuano/ManiSkill.git@3dc8c0c52c71c2f41932eb9f0371ca340cf1b038",
  "torch",
  "sapien",
  "transforms3d",
  "imageio",
  "imageio-ffmpeg",
  "orca_arm",
  "pin"
]

lerobot = [
  "lerobot"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: long-running test intended primarily for CI",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orca_sim = [
  "*.xml",
  "scenes/*/*.xml",
  "assets/mjcf/*.xml",
  "assets/mjcf/*/*.xml",
  "assets/mjcf/left/visual/*.stl",
  "assets/mjcf/left/collision/*.stl",
  "assets/mjcf/right/visual/*.stl",
  "assets/mjcf/right/collision/*.stl",
  "models/mjcf/*.mjcf",
  "models/*/*.mjcf",
  "models/*/assets/*.xml",
  "models/*/assets/*/*.stl",
  "models/*/mjcf/*.xml",
  "models/*/mjcf/*.mjcf",
  "models/*/assets/mjcf/*/*.stl",
]
